# .github

./: CODE_OF_CONDUCT.md  ORGANIZATION_STANDARDS.md  README.md  REPOSITORY_SETUP_GUIDE.md  SECURITY.md
profile/: README.md
project-templates/cpp-project/: .gitignore  CMakeLists.txt  README.md
project-templates/nodejs-project/: .gitignore  README.md  package.json
workflow-templates/: cpp-cmake-build.properties.json  cpp-cmake-build.yml  nodejs-build.properties.json  nodejs-build.yml
